--- a/NamesCompatibility/Base.lproj/Main.storyboard
+++ b/NamesCompatibility/Base.lproj/Main.storyboard
@@ -97,6 +97,78 @@
             </objects>
             <point key="canvasLocation" x="53.846153846153847" y="-34.123222748815166"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="bJc-B0-L4R">
+            <objects>
+                <viewController id="BYx-dm-rvw" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="lNr-zs-ZUY">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Compatibility of" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oy4-pI-yoi">
+                                <rect key="frame" x="107.66666666666667" y="147" width="174.66666666666663" height="48"/>
+                                <fontDescription key="fontDescription" name="Noteworthy-Light" family="Noteworthy" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First Name and Second Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cVL-5W-s0D">
+                                <rect key="frame" x="64.666666666666686" y="225" width="261" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="jvS-vB-rB6">
+                                <rect key="frame" x="45" y="279" width="300" height="4"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="Btd-w3-Qwc"/>
+                                </constraints>
+                                <color key="progressTintColor" red="1" green="0.0" blue="0.01666666667" alpha="1" colorSpace="calibratedRGB"/>
+                            </progressView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="50 %" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jPV-Ai-QpU">
+                                <rect key="frame" x="171.66666666666666" y="303" width="47" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K0z-o2-pzc">
+                                <rect key="frame" x="125" y="367" width="140" height="50"/>
+                                <color key="backgroundColor" red="0.43940418510000001" green="0.25278014059999998" blue="0.77204536180000005" alpha="0.5" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="Bfx-tY-R3d"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="140" id="krf-2o-3A1"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Go Back">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <integer key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="AcC-d1-uw8"/>
+                        <color key="backgroundColor" systemColor="systemGray3Color"/>
+                        <constraints>
+                            <constraint firstItem="jvS-vB-rB6" firstAttribute="top" secondItem="cVL-5W-s0D" secondAttribute="bottom" constant="30" id="9XE-Zx-28N"/>
+                            <constraint firstItem="cVL-5W-s0D" firstAttribute="centerX" secondItem="lNr-zs-ZUY" secondAttribute="centerX" id="HGY-AR-bFW"/>
+                            <constraint firstItem="K0z-o2-pzc" firstAttribute="top" secondItem="jPV-Ai-QpU" secondAttribute="bottom" constant="40" id="N10-MO-701"/>
+                            <constraint firstItem="jvS-vB-rB6" firstAttribute="centerX" secondItem="lNr-zs-ZUY" secondAttribute="centerX" id="YBC-V1-0kL"/>
+                            <constraint firstItem="K0z-o2-pzc" firstAttribute="centerX" secondItem="lNr-zs-ZUY" secondAttribute="centerX" id="bij-T9-A8w"/>
+                            <constraint firstItem="oy4-pI-yoi" firstAttribute="top" secondItem="AcC-d1-uw8" secondAttribute="top" constant="100" id="fgU-HP-Xf6"/>
+                            <constraint firstItem="jPV-Ai-QpU" firstAttribute="centerX" secondItem="lNr-zs-ZUY" secondAttribute="centerX" id="qrf-2q-6zl"/>
+                            <constraint firstItem="oy4-pI-yoi" firstAttribute="centerX" secondItem="lNr-zs-ZUY" secondAttribute="centerX" id="sSo-Mt-198"/>
+                            <constraint firstItem="cVL-5W-s0D" firstAttribute="top" secondItem="oy4-pI-yoi" secondAttribute="bottom" constant="30" id="vbY-bs-sTp"/>
+                            <constraint firstItem="jPV-Ai-QpU" firstAttribute="top" secondItem="jvS-vB-rB6" secondAttribute="bottom" constant="20" id="z16-GQ-pdJ"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AjL-zd-bgX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="723" y="-34"/>
+        </scene>
     </scenes>
     <resources>
         <systemColor name="systemGray3Color">
