--- a/NamesCompatibility/Base.lproj/Main.storyboard
+++ b/NamesCompatibility/Base.lproj/Main.storyboard
@@ -162,7 +162,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <action selector="backButtonTapped" destination="BYx-dm-rvw" eventType="touchUpInside" id="H2C-GG-dE5"/>
+                                    <segue destination="czY-y8-8bR" kind="unwind" unwindAction="unwindSegueToFirstVCWithSegue:" id="iE4-Ff-pTQ"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -186,7 +186,6 @@
                         <outlet property="namesLabel" destination="cVL-5W-s0D" id="8so-19-G1y"/>
                         <outlet property="progressView" destination="jvS-vB-rB6" id="GNq-6q-3sm"/>
                         <outlet property="resultLabel" destination="jPV-Ai-QpU" id="MWC-RZ-gkC"/>
-                        <segue destination="czY-y8-8bR" kind="unwind" identifier="unwindSegue" unwindAction="unwindSegueToFirstVCWithSegue:" id="DcX-y6-Tqf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AjL-zd-bgX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
